refactor: handle exceptions in controller of matadata domain